@@ -54,5 +54,12 @@
             evaluation="return (...):spread_poison_eval()"
             execution="(...):spread_poison_exec()"
         [/candidate_action]
+        [candidate_action]
+            engine=lua
+            name=move_to_enemy
+            max_score=95000
+            evaluation="return (...):place_healers_eval()"
+            execution="(...):place_healers_exec()"
+        [/candidate_action]
     [/stage]
 [/ai]
