@@ -9,6 +9,7 @@ return {
         local AH = wesnoth.require "ai/lua/ai_helper.lua"
         local BC = wesnoth.require "ai/lua/battle_calcs.lua"
         local LS = wesnoth.require "lua/location_set.lua"
+        local HS = wesnoth.require("ai/micro_ais/ais/mai_healer_support_engine.lua").init(ai)
 
         ------ Stats at beginning of turn -----------
 
@@ -69,7 +70,8 @@ return {
                     formula = '($this_unit.moves = $this_unit.max_moves) and ($this_unit.hitpoints = $this_unit.max_hitpoints)'
                 }[1]
             if not leader then
-                -- CA is irrelevant if no leader
+                -- CA is irrelevant if no leader or the leader may have moved from another CA
+                self.data.leader_target = nil
                 AH.done_eval_messages(start_time, ca_name)
                 return 0
             end
@@ -464,6 +466,17 @@ return {
 
             self.data.attack = nil
         end
+
+        generic_rush.healer_support_eval = HS.healer_support_eval
+
+        function generic_rush:place_healers_eval()
+            if generic_rush:healer_support_eval() > 0 then
+                return 95000
+            end
+            return 0
+        end
+
+        generic_rush.place_healers_exec = HS.healer_support_exec
 
         return generic_rush
     end
