@@ -15,6 +15,7 @@ Version 1.11.1+svn:
      * Fix bug when playing on maps with a turn limit.
      * Fix bug handling regeneration.
      * Minor improvements in switching between castles.
+     * Add healer support micro AI to improve healer use.
    * New [micro_ai] tag, 18 different Micro AIs, and 14 test scenarios
      * This includes AIs for 7 different animal behaviors, bottleneck defense,
        2 different guardians and a coward, healer support, lurkers,
